2006-07-28 Matej Urbas <matej.urbas@gmail.com>

	* WelcomePageView.cs: Added i18n support for the title and a small part of
	  the contents.

2006-07-28  Scott Ellington  <scott.ellington@gmail.com>

	* WelcomePageView.cs: 
	convert project's URI to local path (fixes 78579)

2006-07-03 Lluis Sanchez Gual  <lluis@novell.com> 

	* WelcomePage.addin.xml: Updated versions.

2006-06-08 Matej Urbas <matej.urbas@gmail.com>

	* WelcomePageView.cs: Made the Welcome page ViewOnly.

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* WelcomePage.addin.xml: Updated versions.
	* WelcomePage.mdp: Updated.

2006-04-04 Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.xsl: Removed cshrp.net.

2006-03-30 Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am:
	* WelcomePage.addin.xml: Updated references.

2006-03-29 Grzegorz Sobanski  <silk@boktor.net>  

	* Makefile.am: removed unneeded references to nunit.

2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* Makefile.am: Use an unified format. Patch by Matze Braun.
	* WelcomePage.addin.xml: Updated add-in versions.

2005-12-13  David MakovskA <yakeen@sannyas-on.net>

	* WelcomePageView.cs:
	Show uri of project or web link in status bar when mouse over link
	
2005-11-29  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* WelcomePage.xsl:
	Added tooltips for recent projects.

2005-11-16  Lluis Sanchez Gual  <lluis@novell.com> 

	Added WelcomePage addin, by Scott Ellington.
